# godot-mcap

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.github/workflows/: release-on-tag.yml
addons/godot_mcap/: godot_mcap.gdextension
src/: api.rs  binary_stream.rs  convert.rs  lib.rs  reader.rs  types.rs  util.rs  writer.rs
src/reader/: buf.rs  filter.rs  iterator.rs  mcap_reader.rs  mod.rs  replay.rs
