[package]
name = "godot-mcap"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { version = "0.3.5", features = ["api-4-3", "register-docs"] }
mcap = "0.23.3"
enumset = "1.1.10"


[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[features]
default = ["zstd", "lz4"]
zstd = ["mcap/zstd"]
lz4  = ["mcap/lz4"]