[package]
name = "godot-mcap"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
godot = { version = "0.4.2", features = ["api-4-3", "register-docs"] }
mcap = "0.23.4"
enumset = "1.1.10"
memmap2 = "0.9.8"


[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[features]
default = ["zstd", "lz4"]
zstd = ["mcap/zstd"]
lz4  = ["mcap/lz4"]